--- a/conf/xorg.kbd.conf
+++ b/conf/xorg.kbd.conf
@@ -1,7 +1,8 @@
 Section "InputClass"
-	Identifier "keyboard"
-	Driver "evdev"
-	MatchIsKeyboard "True"
-	Option "xkb_layout" "fr"
-	Option "xkb_variant" "bepo"
+    Identifier "keyboard"
+    Driver "evdev"
+    MatchIsKeyboard "on"
+    Option "xkb_layout" "fr,fr,us"
+    Option "xkb_variant" "bepo,,"
+    Option "xkb_options" "grp:alt_caps_toggle"
 EndSection
