--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 __pycache__
 .vscode
+conf/user/sublime-text-3/Packages/User/Package Control.*
+conf/user/sublime-text-3/Packages/User/Color Highlighter/
