--- a/conf/user/i3/config
+++ b/conf/user/i3/config
@@ -5,6 +5,7 @@ floating_modifier $mod
 # start a terminal
 bindcode $mod+36 exec gnome-terminal
 bindcode $mod+Shift+36 exec firefox
+bindcode $mod+Shift+32 exec i3lock
 
 # kill focused window
 bindcode $mod+Shift+24 kill
