--- a/conf/user/i3/config
+++ b/conf/user/i3/config
@@ -7,6 +7,9 @@ bindcode $mod+36 exec gnome-terminal
 bindcode $mod+Shift+36 exec $HOME/Downloads/firefox/firefox
 bindcode $mod+Shift+32 exec $HOME/doc/lockscreens/lock.sh
 
+# sounds
+bindcode $mod+Shift+76 exec mpv $HOME/doc/depots/m/blobs/coin.wav
+
 # kill focused window
 bindcode $mod+Shift+24 kill
 
