--- a/conf/user/i3/config
+++ b/conf/user/i3/config
@@ -9,6 +9,8 @@ bindcode $mod+Shift+32 exec $HOME/doc/lockscreens/lock.sh
 
 # sounds
 bindcode $mod+Shift+76 exec mpv $HOME/doc/depots/m/blobs/coin.wav
+bindcode $mod+Shift+95 exec mpv $HOME/doc/depots/m/blobs/opening.wav
+bindcode $mod+Shift+96 exec mpv $HOME/doc/depots/m/blobs/ba-dum-tss_2.mp3
 
 # kill focused window
 bindcode $mod+Shift+24 kill
