--- a/conf/user/i3/config
+++ b/conf/user/i3/config
@@ -4,8 +4,8 @@ floating_modifier $mod
 
 # start a terminal
 bindcode $mod+36 exec gnome-terminal
-#bindcode $mod+Shift+36 exec $HOME/Downloads/firefox/firefox
-bindcode $mod+Shift+36 exec chromium
+bindcode $mod+Shift+36 exec $HOME/Downloads/firefox/firefox
+#bindcode $mod+Shift+36 exec chromium
 bindcode $mod+Shift+32 exec $HOME/doc/lockscreens/lock.sh
 
 # sounds
