--- a/conf/user/i3/config
+++ b/conf/user/i3/config
@@ -4,9 +4,10 @@ floating_modifier $mod
 
 # start a terminal
 bindcode $mod+36 exec gnome-terminal
-bindcode $mod+Shift+36 exec $HOME/Downloads/firefox/firefox
+bindcode $mod+Shift+36 exec firefox
 #bindcode $mod+Shift+36 exec chromium
-bindcode $mod+Shift+32 exec $HOME/doc/lockscreens/lock.sh
+#bindcode $mod+Shift+32 exec $HOME/doc/lockscreens/lock.sh
+bindcode $mod+Shift+32 exec i3lock -i $HOME/doc/lockscreens/montagne_mononoke.jpg.png
 
 # sounds
 bindcode $mod+Shift+67 exec aplay $HOME/doc/depots/m/blobs/shame.wav
