--- a/code/rusthings/carno/Cargo.toml
+++ b/code/rusthings/carno/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 authors = ["Florent Peterschmitt <florent@peterschmitt.fr>"]
 
 [dependencies]
+serde = "1.0.55"
+serde_derive = "1.0.55"
+bson = "0.10.0"
+mongodb = "0.3.7"
