--- a/user/i3/config
+++ b/user/i3/config
@@ -4,8 +4,8 @@ floating_modifier $mod
 
 # start a terminal
 bindcode $mod+36 exec konsole
-bindcode $mod+Shift+36 exec firefox
-#bindcode $mod+Shift+36 exec chromium
+#bindcode $mod+Shift+36 exec firefox
+bindcode $mod+Shift+36 exec chromium --password-store=gnome
 #bindcode $mod+Shift+32 exec $HOME/doc/lockscreens/lock.sh
 bindcode $mod+Shift+32 exec i3lock -i $HOME/doc/walls/lock.png
 
