--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ __pycache__
 .vscode
 conf/user/sublime-text-3/Packages/User/Package Control.*
 conf/user/sublime-text-3/Packages/User/Color Highlighter/
+st/config.h
+*.o
+st/st
