--- a/user/.config/i3/config
+++ b/user/.config/i3/config
@@ -3,7 +3,7 @@ font pango:Fira Mono 9
 floating_modifier $mod
 
 # start a terminal
-bindcode $mod+36 exec st
+bindcode $mod+36 exec $HOME/doc/depots/m/conf/st/st
 #bindcode $mod+Shift+36 exec firefox
 bindcode $mod+Shift+36 exec chromium --password-store=gnome
 #bindcode $mod+Shift+32 exec $HOME/doc/lockscreens/lock.sh
