--- a/user/.config/i3/config
+++ b/user/.config/i3/config
@@ -7,7 +7,7 @@ bindcode $mod+36 exec $HOME/doc/depots/m/conf/st/st
 #bindcode $mod+Shift+36 exec firefox
 bindcode $mod+Shift+36 exec chromium --password-store=gnome
 #bindcode $mod+Shift+32 exec $HOME/doc/lockscreens/lock.sh
-bindcode $mod+Shift+32 exec i3lock -i $HOME/doc/walls/lock.png
+bindcode $mod+Shift+32 exec i3lock
 
 # sounds
 bindcode $mod+Shift+67 exec aplay $HOME/doc/depots/m/blobs/shame.wav
