--- a/user/.tmux.conf
+++ b/user/.tmux.conf
@@ -1,3 +1,5 @@
 set-option -gs update-environment "_BP_TMUX_UTF8"
 set-option -gs set-titles on
 set-option -gs history-limit 100000
+set-option -gs default-terminal "screen-256color"
+set-option -gs escape-time 10
