--- a/user/.tmux.conf
+++ b/user/.tmux.conf
@@ -3,3 +3,5 @@ set-option -gs set-titles on
 set-option -gs history-limit 100000
 set-option -gs default-terminal "screen-256color"
 set-option -gs escape-time 10
+# https://github.com/tmux/tmux/issues/1293#issuecomment-367385211
+set-option -as terminal-overrides ',st*:Ss@'
