--- a/user/.tmux.conf
+++ b/user/.tmux.conf
@@ -4,4 +4,6 @@ set-option -gs history-limit 100000
 set-option -gs default-terminal "screen-256color"
 set-option -gs escape-time 10
 # https://github.com/tmux/tmux/issues/1293#issuecomment-367385211
+# Ss is used to change cursor style (https://invisible-island.net/xterm/terminfo.html)
+# cancel (@) this operation with suckless terminal
 set-option -as terminal-overrides ',st*:Ss@'
