--- a/user/.config/i3/config
+++ b/user/.config/i3/config
@@ -9,7 +9,7 @@ bindcode $mod+Mod1+36 exec st
 #bindcode $mod+Shift+36 exec firefox
 bindcode $mod+Shift+36 exec chromium --password-store=gnome
 #bindcode $mod+Shift+32 exec $HOME/doc/lockscreens/lock.sh
-bindcode $mod+Shift+32 exec i3lock -c 000000
+bindcode $mod+Shift+32 exec i3lock -i $HOME/doc/wallpapers/japan_door.png
 
 # sounds
 bindcode $mod+Shift+67 exec aplay $HOME/doc/depots/m/blobs/shame.wav
